[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/main_screens/question_templates/Elements/interactable_element.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/main_screens/question_templates/Elements/dragable_element.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 40, 21 )

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;
uniform float width = 2.0;
uniform vec4 color: hint_color;

void vertex() {
	VERTEX += (UV * 2.0 - 1.0) * width;
}

void fragment(){
	vec2 uv = UV;
    vec4 col;
	
	vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
	uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
	if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
		COLOR.a = 0.0;
	} else {
		col = texture(TEXTURE, uv);
	}
	
	
    vec2 ps = TEXTURE_PIXEL_SIZE * width; // multiply only once instead of eight times.
    float a;
    float maxa = col.a;
    float mina = col.a;

    // Use 8-way kernel for smoothness
    //------------------//
    //    X   X   X     //
    //      \\ | /       //
    //    X - O - X     //
    //      / | \\       //
    //    X   X   X     //
    //------------------//

    for(float y = -1.0; y <= 1.0; y++) {
        for(float x = -1.0; x <= 1.0; x++) {
            if(vec2(x,y) == vec2(0.0)) {
                continue; // ignore the center of kernel
            }

            a = texture(TEXTURE, UV + vec2(x,y)*ps).a;
            maxa = max(a, maxa); 
            mina = min(a, mina);
        }
    }

    // Fill transparent pixels only, don't overlap texture
    if(col.a == 0.0) {
        COLOR = mix(col, color, maxa-mina);
    } else {
        // Note on old code: if the last mix value is always 0, why even use it?
        COLOR = col;
    }
}"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 6 )
shader_param/width = 2.0
shader_param/color = null

[node name="DragableElement" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 4 )

[node name="Icon" parent="." index="2"]
material = SubResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_DragableElement_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_DragableElement_area_exited"]
[connection signal="input_event" from="." to="." method="_on_DragableElement_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_DragableElement_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_DragableElement_mouse_exited"]
